// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="ant-divider ant-divider-horizontal"
  id="default"
  role="separator"
/>
`;

exports[`Render properties.dashed: true - value[0] 1`] = `
<div
  className="ant-divider ant-divider-horizontal ant-divider-dashed"
  id="properties.dashed: true"
  role="separator"
/>
`;

exports[`Render properties.orientation: center - value[0] 1`] = `
<div
  className="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
  id="properties.orientation: center"
  role="separator"
>
  <span
    className="ant-divider-inner-text"
  >
    <span
      className="{}"
    />
  </span>
</div>
`;

exports[`Render properties.orientation: left - value[0] 1`] = `
<div
  className="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left"
  id="properties.orientation: left"
  role="separator"
>
  <span
    className="ant-divider-inner-text"
  >
    <span
      className="{}"
    />
  </span>
</div>
`;

exports[`Render properties.orientation: right - value[0] 1`] = `
<div
  className="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-right"
  id="properties.orientation: right"
  role="separator"
>
  <span
    className="ant-divider-inner-text"
  >
    <span
      className="{}"
    />
  </span>
</div>
`;

exports[`Render properties.title - value[0] 1`] = `
<div
  className="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
  id="properties.title"
  role="separator"
>
  <span
    className="ant-divider-inner-text"
  >
    <span
      className="{}"
    />
  </span>
</div>
`;

exports[`Render properties.type: horizontal - value[0] 1`] = `
<div
  className="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
  id="properties.type: horizontal"
  role="separator"
>
  <span
    className="ant-divider-inner-text"
  >
    <span
      className="{}"
    />
  </span>
</div>
`;

exports[`Render properties.type: true - value[0] 1`] = `
<div
  className="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center ant-divider-plain"
  id="properties.type: true"
  role="separator"
>
  <span
    className="ant-divider-inner-text"
  >
    <span
      className="{}"
    />
  </span>
</div>
`;

exports[`Render properties.type: vertical - value[0] 1`] = `
<div
  className="ant-divider ant-divider-vertical ant-divider-with-text ant-divider-with-text-center"
  id="properties.type: vertical"
  role="separator"
>
  <span
    className="ant-divider-inner-text"
  >
    <span
      className="{}"
    />
  </span>
</div>
`;

exports[`Render with html in title - value[0] 1`] = `
<div
  className="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
  id="with html in title"
  role="separator"
>
  <span
    className="ant-divider-inner-text"
  >
    <span
      className="{}"
    />
  </span>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.dashed: true 1`] = `true`;

exports[`Test Schema properties.dashed: true 2`] = `null`;

exports[`Test Schema properties.orientation: center 1`] = `true`;

exports[`Test Schema properties.orientation: center 2`] = `null`;

exports[`Test Schema properties.orientation: left 1`] = `true`;

exports[`Test Schema properties.orientation: left 2`] = `null`;

exports[`Test Schema properties.orientation: right 1`] = `true`;

exports[`Test Schema properties.orientation: right 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;

exports[`Test Schema properties.type: horizontal 1`] = `true`;

exports[`Test Schema properties.type: horizontal 2`] = `null`;

exports[`Test Schema properties.type: true 1`] = `true`;

exports[`Test Schema properties.type: true 2`] = `null`;

exports[`Test Schema properties.type: vertical 1`] = `true`;

exports[`Test Schema properties.type: vertical 2`] = `null`;

exports[`Test Schema with html in title 1`] = `true`;

exports[`Test Schema with html in title 2`] = `null`;
